--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
+  "name": "monolith",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "request": "^2.88.2"
   },
-  "name": "monolith",
-  "version": "1.0.0",
-  "main": "app.js",
   "devDependencies": {
-    "nodemon": "^3.1.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.3",
-    "request": "^2.88.2"
+    "nodemon": "^3.1.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "keywords": []
 }
